--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
 </center>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <div id="e"><br><br><center>
-  <img id="ee" src="C:\Users\Lenovo\Documents\pratibha1.jpg">
-  <img  id="eee" src="C:\Users\Lenovo\Documents\pratibha2.jpg">
+  <img id="ee" src="pratibha1.jpg">
+  <img  id="eee" src="pratibha2.jpg">
   </center>
   <h2 id="D">Hi, I am Pratibha Kumari</h2>
   <h2 id="W">Web Developer</h2> 
@@ -372,9 +372,11 @@
 </div></center><center>
 <h1 id="a"> My Work</h1></center>
 <div id="DDDD">
-  <img id="w1" src="C:\Users\Lenovo\Documents\WORK1.jpg">
-  <img id="w2" src="C:\Users\Lenovo\Documents\lord krishna full screen wallpaper.jpg">
-  <img id="w3" src="C:\Users\Lenovo\Downloads\background.jpg">
+  <img id="w1" src="WORK1.jpg">
+  <img id="w2" src="
+    
+    lord krishna full screen wallpaper.jpg">
+  <img id="w3" src="background.jpg">
   
 </div>
 
