--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       color: white;
 
     }
-    #DDDD{
+DD{
       background: brown;
       height: 400PX;
       width:1500PX ;
@@ -164,7 +164,7 @@
       width: 1500PX;
       background: red;
     }
-    #W{
+  W{
       color:red;
       position: absolute;
       top:730PX ;
@@ -180,7 +180,7 @@
       animation: www 4s infinite;
       box-shadow: red;
     }
-    @keyframes www{
+    yframes www{
       0%{
         left: 500px;
       }
@@ -196,12 +196,12 @@
       box-shadow: darkred;
 
     }
-    @keyframes ww2{
+  ames ww2{
       0%{
         left: 0px;
       }
     }
-    #w3{
+    3{
        height: 300px;
       width: 500px;
       border-radius: 100px 100px;
@@ -211,8 +211,8 @@
     box-shadow: darkred;
     animation: ww3 5s infinite;
      }
-     @keyframes ww3{
-      0%{
+    eyframes ww3{
+      {
         left: 560px;
         background: red;
       }
@@ -221,7 +221,7 @@
         background: pink;
       }
      }
-     #eee{
+    ee{
       border-radius: 100% 100%;
       height: 400px;
       width: 400px;
@@ -232,7 +232,7 @@
       box-shadow: pink;
 
      }
-     @keyframes prr{
+keyfs prr{
       0%{
         left:970px;
       }
@@ -257,7 +257,7 @@
      #HH{
       color: white;
      }
-     #fa{
+    a{
       height:100px ;
       width: 100px;
      }
@@ -268,9 +268,7 @@
      #k{
       height: 500px;
       width: 1500px;
-      background: deeppink;
-     }
-     #com{
+      backgro{
       position: absolute;
       left: 600px;
       font-size:30px ;
@@ -283,8 +281,7 @@
       font-size:30px ;
       top: 80px;
       color:white;
-     }
-     #coo{
+     }{
       position: absolute;
       left: 600px;
       font-size:30px ;
@@ -371,11 +368,7 @@
   <p>Jitna bhi hajipur internship ke liye aaye hai.<br> unme se sirf main hun jisko kuch <br>samjh me nhi  aaya hai.<br> mere pass thoda sa dimag hi tha usme bhi <br>patna aane ke baad khatam hote ja raha hai.<br> aur kya hi bole mujhe lga tha patna <br>padhne jayenge to practically padhai hoga<br> lekin apsos ki baat nhi hota hai.<br>internship karne aaye hajipur me <br>tb thoda lg raha hai ki<br> kuch aata hai hmko </p>
 </div></center><center>
 <h1 id="a"> My Work</h1></center>
-<div id="DDDD">
-  <img id="w1" src="WORK1.jpg">
-  <img id="w2" src="
-    
-    lord krishna full screen wallpaper.jpg">
+<div id="">
   <img id="w3" src="background.jpg">
   
 </div>
